Out of Bounds Bug fixed.

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
     font-size: clamp(12px, 1vw, 1em);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow-x: hidden;
+    position: relative;
 }
 
 main {
@@ -87,7 +88,7 @@ img {
 }
 
 .touch-button {
-    background: rgba(255, 255, 255, 0.719);
+    background: rgba(255, 255, 255, 0.7);
     width: 50px;
     height: 50px;
     border-radius: 25%;
